--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,6 @@
 
 @import 'partials/header';
 @import 'partials/jumbotron';
+@import 'partials/products';
+@import 'partials/banner';
 @import 'partials/general'; 
